version/0.4/_sources/api/ansys/geometry/core/designer/selection/NamedSelection.rst.txt




NamedSelection
==============

.. py:class:: NamedSelection(name: str, grpc_client: ansys.geometry.core.connection.client.GrpcClient, bodies: beartype.typing.Optional[beartype.typing.List[ansys.geometry.core.designer.body.Body]] = None, faces: beartype.typing.Optional[beartype.typing.List[ansys.geometry.core.designer.face.Face]] = None, edges: beartype.typing.Optional[beartype.typing.List[ansys.geometry.core.designer.edge.Edge]] = None, beams: beartype.typing.Optional[beartype.typing.List[ansys.geometry.core.designer.beam.Beam]] = None, design_points: beartype.typing.Optional[beartype.typing.List[ansys.geometry.core.designer.designpoint.DesignPoint]] = None, preexisting_id: beartype.typing.Optional[str] = None)
   :canonical: ansys.geometry.core.designer.selection.NamedSelection





   Represents a single named selection within the design assembly.

   This class synchronizes to a design within a supporting Geometry service instance.

   A named selection organizes one or more design entities together for common actions
   against the entire group.

   :Parameters:

       **name** : :class:`python:str`
           User-defined name for the named selection.

       **grpc_client** : :obj:`GrpcClient`
           Active supporting Geometry service instance for design modeling.

       **bodies** : :obj:`List`\[:obj:`Body`], default: :data:`python:None`
           All bodies to include in the named selection.

       **faces** : :obj:`List`\[:obj:`Face`], default: :data:`python:None`
           All faces to include in the named selection.

       **edges** : :obj:`List`\[:obj:`Edge`], default: :data:`python:None`
           All edges to include in the named selection.

       **beams** : :obj:`List`\[:obj:`Beam`], default: :data:`python:None`
           All beams to include in the named selection.

       **design_points** : :obj:`List`\[:obj:`DesignPoints`], default: :data:`python:None`
           All design points to include in the named selection.














   ..
       !! processed by numpydoc !!












Overview
--------
.. py:currentmodule:: NamedSelection
.. tab-set::




    .. tab-item:: Properties

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~id`
            - ID of the named selection.
          * - :py:attr:`~name`
            - Name of the named selection.






Import detail
-------------

.. code-block:: python

    from ansys.geometry.core.designer.selection import NamedSelection


Property detail
---------------
.. py:property:: id
   :canonical: ansys.geometry.core.designer.selection.NamedSelection.id
   :type: str


   
   ID of the named selection.
















   ..
       !! processed by numpydoc !!

.. py:property:: name
   :canonical: ansys.geometry.core.designer.selection.NamedSelection.name
   :type: str


   
   Name of the named selection.
















   ..
       !! processed by numpydoc !!





